--- a/app/index.html
+++ b/app/index.html
@@ -22,8 +22,8 @@
 		<div class="container">
 			<div class="header__wrap header__wrap--desktop">
 				<div class="nav">
-					<a href="#" data-scroll="#about" class="nav__item">О нас</a>
-					<a href="#" data-scroll="#benefits" class="nav__item">Преимущества</a>
+					<a href="#" data-scroll="#about" class="nav__item">О курсе</a>
+					<a href="#" data-scroll="#benefits" class="nav__item">Программа курса</a>
 					<a href="#" data-scroll="#reviews" class="nav__item">Отзывы</a>
 					<a href="#" data-scroll="#rate" class="nav__item">Тарифы</a>
 					<a href="#" data-scroll="#faq" class="nav__item">FAQ</a>
@@ -109,12 +109,12 @@
 				<div class="heading">
 					<h2 class="heading__title heading__title--left"><span
 							class="heading__title heading__title--accent">П</span>робелы в знаниях,</h2>
-					<p class="heading__subtitle heading__subtitle--left">которые мешают Вам заработать на фондовом рынке</p>
+					<p class="heading__subtitle heading__subtitle--left">которые мешают заработать на фондовом рынке</p>
 				</div>
 				<ul class="problem__list">
-					<li class="problem__items">Трейдинг на эмоциях.Финансовая неграмотность.&nbsp;</li>
+					<li class="problem__items">Трейдинг на эмоциях. Финансовая неграмотность.&nbsp;</li>
 					<li class="problem__items">Покупки на жадности и продажи в панике&nbsp;</li>
-					<li class="problem__items">Отсутствие знаний технического и фундаментального анализа</li>
+					<li class="problem__items">&nbsp;Отсутствие знаний технического и фундаментального&nbsp; анализа</li>
 				</ul>
 
 			</div>
@@ -130,14 +130,13 @@
 				<p class="heading__subtitle">именно индивидуальный курс Артема Ивина?</p>
 			</div>
 			<div class="now__content">
-				<p class="now__description">-Более 50% годовой доходности стабильно.&nbsp;<span
+				<p class="now__description">&nbsp;-Более 50% годовой доходности стабильно.&nbsp;<span
 						class="now__description--accent">
 
 						<br></span>&nbsp;-6 лет торговли в плюс &nbsp;<br>&nbsp;<span class="now__description--accent">-На
 						деньги с трейдинга посетил 61 страну.</span>
 					<br>-Все ученики зарабатывают на бирже</span>
-					<br>-Статистика открыта и говорит сама за себя</span>
-					<br>-В отличии от 99% курсов</span>
+					<br>-Статистика открыта и говорит сама за себя</span>					<br>-В отличии от 99% курсов</span>
 					<br>ПОЛНОСТЬЮ ИНДИВИДУАЛЬНОЕ обучение,</span>
 					<br>где вам ответят на ВАШИ вопросы </span>
 					<br>и обучение на примере ВАШИХ компаний</span>
@@ -153,7 +152,7 @@
 	<section class="benefits" id="benefits">
 		<div class="container">
 			<div class="heading">
-				<h2 class="heading__title"><span class="heading__title heading__title--accent"></span>чему Ты научишься?
+				<h2 class="heading__title"><span class="heading__title heading__title--accent"></span>чему вы научитесь?
 				</h2>
 				<p class="heading__subtitle"></p>
 			</div>
@@ -162,22 +161,22 @@
 					<div class="benefits__items">
 						<img class="benefits__image" src="images/dest/benefit-1.png" alt="benefits">
 						<p class="benefits__text"><span class="benefits__text--accent">1.</span> Фундаментальный анализ. Как
-							ОЦЕНИТЬ компанию(p/e, roe, p/s, прибыль, отчеты, долги,&nbsp; маржа, недооцененность и
-							переоцененность, инсайдеры, прогнозы аналитиков.&nbsp;Если учитывать фундаментал при выборе, то
-							даже заходя в сделку как трейдер, у вас всегда есть план Б(оставить в долгосрок, потому что вы
+							ОЦЕНИТЬ компанию (p/e, roe, p/s, прибыль, отчеты, долги, маржа, недооцененность и
+							переоцененность, инсайдеры, прогнозы аналитиков) Если учитывать фундаментал при выборе, то
+							даже заходя в сделку как трейдер, у вас всегда есть план Б (оставить в долгосрок, потому что вы
 							выбирали фундаментально сильную компанию, и можно наращивать позиции на нижних уровнях)</p>
 					</div>
 					<div class="benefits__items">
 						<img class="benefits__image" src="images/dest/benefit-2.png" alt="benefits">
 						<p class="benefits__text"><span class="benefits__text--accent">2.</span> Технический анализ. Как найти
-							максимально низкую точку входа(технический анализ, включающий зоны поддержки и сопротивления,
-							объем, macd, rsi, механику рынка, гэпы, дивергенции. Точка выхода и фиксация прибыли. Как быстро
+							максимально низкую точку входа (технический анализ, включающий зоны поддержки и сопротивления,
+							объем, macd, rsi, механику рынка, гэпы, дивергенции) Точка выхода и фиксация прибыли. Как быстро
 							найти несколько недооцененных компаний из тысяч компаний, торгующихся на бирже.</p>
 					</div>
 					<div class="benefits__items">
 						<img class="benefits__image" src="images/dest/benefit-3.png" alt="benefits">
 						<p class="benefits__text"><span class="benefits__text--accent">3.</span> Психология в
-							трейдинге.Тактика набора позиции и стратегия торговли через отложенные ордера, размер позиции.</p>
+							трейдинге. Тактика набора позиции и стратегия торговли через отложенные ордера, размер позиции.</p>
 					</div>
 					<div class="benefits__items">
 						<img class="benefits__image" src="images/dest/benefit-4.png" alt="benefits">
@@ -194,23 +193,23 @@
 				<div class="benefit__wrapp">
 					<div class="benefits__items">
 						<img class="benefits__image" src="images/dest/benefit-6.png" alt="benefits">
-						<p class="benefits__text"><span class="benefits__text--accent">6.</span> Стратегия</p>
+						<p class="benefits__text"><span class="benefits__text--accent">6.</span> Стратегия. Рыночные циклы.</p>
 					</div>
 					<div class="benefits__items">
 						<img class="benefits__image" src="images/dest/benefit-7.png" alt="benefits">
-						<p class="benefits__text"><span class="benefits__text--accent">7.</span> Тактика</p>
+						<p class="benefits__text"><span class="benefits__text--accent">7.</span> Тактика. Размер позиций, усреднение, отложенные ордера.</p>
 					</div>
 					<div class="benefits__items">
 						<img class="benefits__image" src="images/dest/benefit-8.png" alt="benefits">
-						<p class="benefits__text"><span class="benefits__text--accent">8.</span> Ошибки</p>
+						<p class="benefits__text"><span class="benefits__text--accent">8.</span> Ошибки. Чего нельзя делать на бирже.</p>
 					</div>
 					<div class="benefits__items">
 						<img class="benefits__image" src="images/dest/benefit-9.png" alt="benefits">
-						<p class="benefits__text"><span class="benefits__text--accent">9.</span> Криптовалюты. Биткоин</p>
+						<p class="benefits__text"><span class="benefits__text--accent">9.</span> Криптовалюты. Биткоин. Торговля по выходным.</p>
 					</div>
 					<div class="benefits__items">
 						<img class="benefits__image" src="images/dest/benefit-10.png" alt="benefits">
-						<p class="benefits__text"><span class="benefits__text--accent">10.</span> IPO</p>
+						<p class="benefits__text"><span class="benefits__text--accent">10.</span> IPO. Как выбирать компании и как поднять аллокацию.</p>
 					</div>
 				</div>
 			</div>
@@ -240,7 +239,7 @@
 				</div>
 				<div class="rate__item">
 					<div class="item__wrapp">
-						<h3 class="item__title">1 Индивидуальная консультация по ПО SKYPE, 60 минут</h3>
+						<h3 class="item__title">1 Индивидуальная консультация по SKYPE, 60 минут</h3>
 						<p class="item__subtitle"> </p>
 						<span class="item__desc">Ты сможешь лично задать все вопросы по своему портфелю, стратегии,
 							техническому и фундаментальному анализу или сложной ситуации с конкретной акцией. Или например
@@ -300,43 +299,7 @@
 				<div class="reviews__item">
 					<img src="images/dest/reviews-9.png" alt="reviews">
 				</div>
-				<div class="reviews__item">
-					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div>
-			</div>
+							</div>
 
 		</div>
 	</section>
@@ -353,12 +316,11 @@
 				<div class="accordion">
 					<div class="panel">
 						<div class="panel__title">
-							<a href="#">Нужны ли какие-то базовые знания для прохождения курса?</a>
+							<a href="#">Нужны ли какие-то базовые знания для прохождения курса? Торгуете ли вы в "шорт"?</a>
 						</div>
 						<div class="panel__collapse">
 							<p>
-								Нет, курс подойдет даже начинающим свой путь в инвестировании и трейдинге с нуля
-							</p>
+								Нет, курс подойдет даже начинающим свой путь в инвестировании и трейдинге с нуля. В шорт я не торгую и не рекомендую, потому что там есть 3 уязвимости: стоп-лосс, который будут забирать на волатильности, комиссии, который брокер берет за маржинальную сделку, и цена ликвидации. В "лонге" если вы купили хорошую компанию, и она ушла "под воду", вы можете просто поторговать другие компании и пересидеть просадку, добирая позицию по выгодным ценам.</p>
 						</div>
 					</div>
 
@@ -415,10 +377,8 @@
 							<a href="#">У какого брокера лучше торговать?</a>
 						</div>
 						<div class="panel__collapse">
-							<p>
-								Я рекомендую диверсификацию и сам имею 8 портфелей у разных брокеров под разные
-								стратегии(криптовалюта, ipo, etf, американский рынок долгосрок, дивидендные компании, биотехи,
-								среднесрок, трейдинг) </p>
+							<p>Для трейдинга лучше подходит Тинькофф, но долгосрочные инвестиции я бы держал там, куда вы заходите раз в месяц. Я рекомендую диверсификацию и сам имею 8 портфелей у разных брокеров под разные
+								стратегии(криптовалюта, ipo, etf, американский рынок долгосрок, дивидендные компании, биотехи, российский рынок среднесрок, трейдинг).&nbsp;</p>
 						</div>
 					</div>
 					<div class="panel">
@@ -450,11 +410,10 @@
 								трейдеры-скальперы, которые целый день сидят перед монитором и ловят каждое маленькое движение в
 								1%, а есть позиционный и свинг трейдинг, когда сделки длятся от нескольких дней до нескольких
 								недель, плюс я расставляю отложенные бессрочные ордера на продажи и покупки, и вот поэтому у
-								меня много свободного времени чтобы заниматься всеми остальными делами, я также торгую биткоин,
+								меня много свободного времени чтобы заниматься любимым делом - обучением ( у меня педагогическое образование, раньше я был учителем английского) Трейдинг на 80% это&nbsp; ожидание выгодной сделки, и 20% - сама торговля. Например я торгую биткоин,
 								и вот за весь год в нем было всего 3 точки входа(то есть раз в 4 месяца), остальное время - это
 								просто ожидание. Очень часто самое лучшее что можно сделать - это ничего не делать и сидеть в
-								долларе и ждать хорошую ситуацию в плане соотношения риск-прибыль, а если ситуация найдена , то
-								лучшее что можно сделать - это дать прибыли течь и не суетиться. </p>
+								долларе и ждать хорошую ситуацию в плане соотношения риск-прибыль, а если ситуация найдена , то нажать на кнопку "купить" и лучшее что можно сделать - это дать прибыли течь.</p>
 						</div>
 					</div>
 
@@ -478,7 +437,7 @@
 					<label for="name" class="form__label">Ваше имя:</label>
 					<input type="text" id="name" name="name" class="form__input" placeholder="Артём Ивин" required>
 					<label for="tel" class="form__label">Ваш телефон:</label>
-					<input type="text" id="tel" name="tel" class="form__input" placeholder="+375 (29) 520-95-09" required>
+					<input type="text" id="tel" name="tel" class="form__input" placeholder="+79537777777" required>
 					<label for="email" class="form__label">Ваш E-mail:</label>
 					<input type="text" id="email" name="email" class="form__input" placeholder="example@mail.ru" required>
 					<!-- <input type="button" class="btn form__btn" value="Записаться на курс"> -->
@@ -500,22 +459,22 @@
 						<h3 class="footer__title">Контакты</h3>
 						<div class="contacts__block">
 							<a href="tel:+79537385366" class="phone"><img src="images/dest/phone.png"
-									alt="phone">+79537385366</a>
+									alt="phone">+7 953 738 53 66</a>
 							<a href="mailto:becs@bk.ru" class="mail"><img src="images/dest/mail.png" alt="mail">becs@bk.ru</a>
 							<div class="social">
-								<a href="https://tlgg.ru/89537385366" class="social__link"><img src="images/dest/telegram.png"
-										alt="telegram"></a>
+								
+										
 								<a href="https://api.whatsapp.com/send?phone=79537385366=" class="social__link"><img
 										src="images/dest/whatsapp.png" alt="whatsapp"></a>
 								<a href="https://vk.com/ivinartem" class="social__link"><img src="images/dest/vk.png"
 										alt="vk"></a>
-								<a href="https://www.instagram.com/artemivin/" class="social__link"><img
+								<a href="https://www.instagram.com/arteminvesting/" class="social__link"><img
 										src="images/dest/insatgram.png" alt="instagram"></a>
 							</div>
 						</div>
 					</div>
 					<div class="footer__block requisites">
-						<h3 class="footer__title">Реквизиты</h3>
+						<h3 class="footer__title">Реквизиты для оплаты обучения и сигналов</h3>
 						<div class="requisites__block">
 							<ul>
 								<li><img src="images/dest/sber.png" alt="Sber">Сбербанк: 4279 5300 2056 1132</li>
