Правки согласно TODO 1.0

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 	<title> Трейдинг и инвестиции</title>
-	<meta name="description" content="Startup HTML template OptimizedHTML 5">
+	<meta name="description" content="Индивидуальное обучение трейдингу от Артёма Ивина">
 	<meta name="viewport" content="width=device-width">
 	<link rel="icon" href="images/favicon.png">
 	<meta property="og:image" content="img/dest/preview.jpg">
@@ -112,9 +112,9 @@
 					<p class="heading__subtitle heading__subtitle--left">которые мешают заработать на фондовом рынке</p>
 				</div>
 				<ul class="problem__list">
-					<li class="problem__items">Трейдинг на эмоциях. Финансовая неграмотность.&nbsp;</li>
-					<li class="problem__items">Покупки на жадности и продажи в панике&nbsp;</li>
-					<li class="problem__items">&nbsp;Отсутствие знаний технического и фундаментального&nbsp; анализа</li>
+					<li class="problem__items">Трейдинг на эмоциях. Финансовая неграмотность.</li>
+					<li class="problem__items">Покупки на жадности и продажи в панике</li>
+					<li class="problem__items">Отсутствие знаний технического и фундаментального анализа</li>
 				</ul>
 
 			</div>
@@ -126,21 +126,21 @@
 	<section class="now">
 		<div class="container">
 			<div class="heading">
-				<h2 class="heading__title"><span class="heading__title heading__title--accent">П</span>очему&nbsp;</h2>
+				<h2 class="heading__title"><span class="heading__title heading__title--accent">П</span>очему</h2>
 				<p class="heading__subtitle">именно индивидуальный курс Артема Ивина?</p>
 			</div>
 			<div class="now__content">
-				<p class="now__description">&nbsp;-Более 50% годовой доходности стабильно.&nbsp;<span
-						class="now__description--accent">
-
-						<br></span>&nbsp;-6 лет торговли в плюс &nbsp;<br>&nbsp;<span class="now__description--accent">-На
-						деньги с трейдинга посетил 61 страну.</span>
-					<br>-Все ученики зарабатывают на бирже</span>
-					<br>-Статистика открыта и говорит сама за себя</span>					<br>-В отличии от 99% курсов</span>
-					<br>ПОЛНОСТЬЮ ИНДИВИДУАЛЬНОЕ обучение,</span>
-					<br>где вам ответят на ВАШИ вопросы </span>
-					<br>и обучение на примере ВАШИХ компаний</span>
-					<br>с рекомендациями в РЕАЛЬНОМ ВРЕМЕНИ</span>
+				<p class="now__description">
+					<span>-Более 50% годовой доходности стабильно.</span>
+					<span>-6 лет торговли в плюс</span>
+					<span class="now__description--accent">-На деньги с трейдинга посетил 61 страну.</span>
+					<span>-Все ученики зарабатывают на бирже</span>
+					<span><a
+							href="https://vk.com/away.php?to=https%3A%2F%2Fwww.tinkoff.ru%2Finvest%2Fsocial%2Fprofile%2FArtem_Ivin%2F&el=snippet">-Статистика
+							открыта и говорит сама за себя<br> в отличии от 99% курсов</a></span>
+					<span>ПОЛНОСТЬЮ ИНДИВИДУАЛЬНОЕ обучение, <br> где вам ответят на ВАШИ вопросы </span>
+					<span>и обучение на примере ВАШИХ компаний</span>
+					<span>с рекомендациями в РЕАЛЬНОМ ВРЕМЕНИ</span>
 				</p>
 			</div>
 			<a href="#" class="btn btn--now" data-scroll="#form">Записаться на обучение</a>
@@ -189,27 +189,30 @@
 						<p class="benefits__text"><span class="benefits__text--accent">5.</span> Свечной анализ.&nbsp;
 							Понимание когда НЕЛЬЗЯ входить в сделку настолько же важно, как выбор точки входа.</p>
 					</div>
-				</div>
-				<div class="benefit__wrapp">
 					<div class="benefits__items">
 						<img class="benefits__image" src="images/dest/benefit-6.png" alt="benefits">
-						<p class="benefits__text"><span class="benefits__text--accent">6.</span> Стратегия. Рыночные циклы.</p>
+						<p class="benefits__text"><span class="benefits__text--accent">6.</span> Стратегия. Рыночные циклы.
+						</p>
 					</div>
 					<div class="benefits__items">
 						<img class="benefits__image" src="images/dest/benefit-7.png" alt="benefits">
-						<p class="benefits__text"><span class="benefits__text--accent">7.</span> Тактика. Размер позиций, усреднение, отложенные ордера.</p>
+						<p class="benefits__text"><span class="benefits__text--accent">7.</span> Тактика. Размер позиций,
+							усреднение, отложенные ордера.</p>
 					</div>
 					<div class="benefits__items">
 						<img class="benefits__image" src="images/dest/benefit-8.png" alt="benefits">
-						<p class="benefits__text"><span class="benefits__text--accent">8.</span> Ошибки. Чего нельзя делать на бирже.</p>
+						<p class="benefits__text"><span class="benefits__text--accent">8.</span> Ошибки. Чего нельзя делать на
+							бирже.</p>
 					</div>
 					<div class="benefits__items">
 						<img class="benefits__image" src="images/dest/benefit-9.png" alt="benefits">
-						<p class="benefits__text"><span class="benefits__text--accent">9.</span> Криптовалюты. Биткоин. Торговля по выходным.</p>
+						<p class="benefits__text"><span class="benefits__text--accent">9.</span> Криптовалюты. Биткоин.
+							Торговля по выходным.</p>
 					</div>
 					<div class="benefits__items">
 						<img class="benefits__image" src="images/dest/benefit-10.png" alt="benefits">
-						<p class="benefits__text"><span class="benefits__text--accent">10.</span> IPO. Как выбирать компании и как поднять аллокацию.</p>
+						<p class="benefits__text"><span class="benefits__text--accent">10.</span> IPO. Как выбирать компании и
+							как поднять аллокацию.</p>
 					</div>
 				</div>
 			</div>
@@ -234,7 +237,7 @@
 						<span class="item__desc">Пошагово через демонстрацию экрана я покажу и расскажу как найти,
 							проанализировать технически и фундаментально, купить, и продать акции компании с
 							прибылью. Этот курс позволит тебе стабильно зарабатывать постоянно.</span>
-							<span class="item__price">Цена курса: <span class="item__price--accent">25 000р</span></span>
+						<span class="item__price">Цена курса: <span class="item__price--accent">25 000р</span></span>
 					</div>
 				</div>
 				<div class="rate__item">
@@ -244,7 +247,7 @@
 						<span class="item__desc">Ты сможешь лично задать все вопросы по своему портфелю, стратегии,
 							техническому и фундаментальному анализу или сложной ситуации с конкретной акцией. Или например
 							заполнить пробелы в теме криптовалют или IPO.</span>
-							<span class="item__price">Цена курса: <span class="item__price--accent">3 500р</span></span>
+						<span class="item__price">Цена курса: <span class="item__price--accent">3 500р</span></span>
 					</div>
 				</div>
 				<div class="rate__item">
@@ -254,7 +257,7 @@
 						<span class="item__desc">Я каждый день выкладываю точки входа и выхода из основных сделок, которые
 							есть у меня в портфеле. Если у тебя нет времени и желания учиться самому, но ты хочешь уже сейчас
 							зарабатывать на фондовом рынке, этот вариант для тебя.</span>
-							<span class="item__price">Цена за 1 месяц: <span class="item__price--accent">1000 р</span></span>
+						<span class="item__price">Цена за 1 месяц: <span class="item__price--accent">1000 р</span></span>
 					</div>
 				</div>
 			</div>
@@ -273,12 +276,6 @@
 			</div>
 			<div class="reviews__content slider">
 				<div class="reviews__item">
-					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/reviews-2.png" alt="reviews">
-				</div>
-				<div class="reviews__item">
 					<img src="images/dest/reviews-3.png" alt="reviews">
 				</div>
 				<div class="reviews__item">
@@ -296,10 +293,7 @@
 				<div class="reviews__item">
 					<img src="images/dest/reviews-8.png" alt="reviews">
 				</div>
-				<div class="reviews__item">
-					<img src="images/dest/reviews-9.png" alt="reviews">
-				</div>
-							</div>
+			</div>
 
 		</div>
 	</section>
@@ -320,7 +314,11 @@
 						</div>
 						<div class="panel__collapse">
 							<p>
-								Нет, курс подойдет даже начинающим свой путь в инвестировании и трейдинге с нуля. В шорт я не торгую и не рекомендую, потому что там есть 3 уязвимости: стоп-лосс, который будут забирать на волатильности, комиссии, который брокер берет за маржинальную сделку, и цена ликвидации. В "лонге" если вы купили хорошую компанию, и она ушла "под воду", вы можете просто поторговать другие компании и пересидеть просадку, добирая позицию по выгодным ценам.</p>
+								Нет, курс подойдет даже начинающим свой путь в инвестировании и трейдинге с нуля. В шорт я не
+								торгую и не рекомендую, потому что там есть 3 уязвимости: стоп-лосс, который будут забирать на
+								волатильности, комиссии, который брокер берет за маржинальную сделку, и цена ликвидации. В
+								"лонге" если вы купили хорошую компанию, и она ушла "под воду", вы можете просто поторговать
+								другие компании и пересидеть просадку, добирая позицию по выгодным ценам.</p>
 						</div>
 					</div>
 
@@ -377,8 +375,11 @@
 							<a href="#">У какого брокера лучше торговать?</a>
 						</div>
 						<div class="panel__collapse">
-							<p>Для трейдинга лучше подходит Тинькофф, но долгосрочные инвестиции я бы держал там, куда вы заходите раз в месяц. Я рекомендую диверсификацию и сам имею 8 портфелей у разных брокеров под разные
-								стратегии(криптовалюта, ipo, etf, американский рынок долгосрок, дивидендные компании, биотехи, российский рынок среднесрок, трейдинг).&nbsp;</p>
+							<p>Для трейдинга лучше подходит Тинькофф, но долгосрочные инвестиции я бы держал там, куда вы
+								заходите раз в месяц. Я рекомендую диверсификацию и сам имею 8 портфелей у разных брокеров под
+								разные
+								стратегии(криптовалюта, ipo, etf, американский рынок долгосрок, дивидендные компании, биотехи,
+								российский рынок среднесрок, трейдинг).&nbsp;</p>
 						</div>
 					</div>
 					<div class="panel">
@@ -410,10 +411,13 @@
 								трейдеры-скальперы, которые целый день сидят перед монитором и ловят каждое маленькое движение в
 								1%, а есть позиционный и свинг трейдинг, когда сделки длятся от нескольких дней до нескольких
 								недель, плюс я расставляю отложенные бессрочные ордера на продажи и покупки, и вот поэтому у
-								меня много свободного времени чтобы заниматься любимым делом - обучением ( у меня педагогическое образование, раньше я был учителем английского) Трейдинг на 80% это&nbsp; ожидание выгодной сделки, и 20% - сама торговля. Например я торгую биткоин,
+								меня много свободного времени чтобы заниматься любимым делом - обучением ( у меня педагогическое
+								образование, раньше я был учителем английского) Трейдинг на 80% это&nbsp; ожидание выгодной
+								сделки, и 20% - сама торговля. Например я торгую биткоин,
 								и вот за весь год в нем было всего 3 точки входа(то есть раз в 4 месяца), остальное время - это
 								просто ожидание. Очень часто самое лучшее что можно сделать - это ничего не делать и сидеть в
-								долларе и ждать хорошую ситуацию в плане соотношения риск-прибыль, а если ситуация найдена , то нажать на кнопку "купить" и лучшее что можно сделать - это дать прибыли течь.</p>
+								долларе и ждать хорошую ситуацию в плане соотношения риск-прибыль, а если ситуация найдена , то
+								нажать на кнопку "купить" и лучшее что можно сделать - это дать прибыли течь.</p>
 						</div>
 					</div>
 
@@ -458,12 +462,12 @@
 					<div class="footer__block contacts">
 						<h3 class="footer__title">Контакты</h3>
 						<div class="contacts__block">
-							<a href="tel:+79537385366" class="phone"><img src="images/dest/phone.png"
-									alt="phone">+7 953 738 53 66</a>
+							<a href="tel:+79537385366" class="phone"><img src="images/dest/phone.png" alt="phone">+7 953 738 53
+								66</a>
 							<a href="mailto:becs@bk.ru" class="mail"><img src="images/dest/mail.png" alt="mail">becs@bk.ru</a>
 							<div class="social">
-								
-										
+
+
 								<a href="https://api.whatsapp.com/send?phone=79537385366=" class="social__link"><img
 										src="images/dest/whatsapp.png" alt="whatsapp"></a>
 								<a href="https://vk.com/ivinartem" class="social__link"><img src="images/dest/vk.png"
@@ -517,7 +521,7 @@
 
 				<h5>Защита данных</h5>
 
-				<p>Администрация сайта сайт.ru (далее Сайт) не может передать или раскрыть информацию, предоставленную
+				<p>Администрация сайта artemivin.ru (далее Сайт) не может передать или раскрыть информацию, предоставленную
 					пользователем (далее Пользователь) при регистрации и использовании функций сайта третьим лицам, кроме
 					случаев, описанных законодательством страны, на территории которой пользователь ведет свою деятельность.
 				</p>
@@ -583,7 +587,7 @@
 
 
 	<script src="js/app.min.js"></script>
-	
+
 
 	<!-- Yandex.Metrika counter -->
 	<script type="text/javascript">
