--- a/todo.html
+++ b/todo.html
@@ -1,20 +1,30 @@
+
+
+
+
+
+
+
+
+
+
 <!--
 	 todo Переработать bg (Плавность перехода) + в блоке ЧЕМУ ТЫ НАУЧИШЬСЯ? убрать с фона текст
-	 todo После фразы -Статистика открыта и говорит сама за себя добавить ссылку (Смотреть вк)
+	 ? После фразы -Статистика открыта и говорит сама за себя добавить ссылку (Смотреть вк)
 	 ? Отступы подредактировать (Почему курс Артема Ивина) (Баг)
 	 todo Цены на однин уровень + старая цена+процент скидки
-	 todo Блок ЧЕМУ ВЫ НАУЧИТЕСЬ? (В одну колонку, убрать стили flex)
+	 ? Блок ЧЕМУ ВЫ НАУЧИТЕСЬ? (В одну колонку, убрать стили flex)
 	 todo Бегущий текст наезжает на фото, сделать в 2 строки (проверить)
 	 todo Ссылку в соц сетях (превью)
-	 todo Большой отступ на главном экране – поднять фотографию наверх.
-	 todo Заменить плюсы на другие иконки
-	 todo Блок пробелы в знаниях - Неправильное оформление блока, колонки выстроены неравномерно.????
-	 todo Часто задаваемые вопросы желтый цвет заменить на белый
+	 ? Большой отступ на главном экране – поднять фотографию наверх.
+	 ? Заменить плюсы на другие иконки
+	 ! Блок пробелы в знаниях - Неправильное оформление блока, колонки выстроены неравномерно.????
+	 ? Часто задаваемые вопросы желтый цвет заменить на белый
 	 todo Под формой в обязательном порядке необходимо добавить согласие на обработку данных. (Интересно моё мнение)
 	 ? Заменить favicon
 	 todo форма записи на курс добавить выбор тарифа
-	 todo Реквизиты для оплаты кликабельны все (Поджредактировать стили)
-	 todo В разделе Информация зачем-то подсвечивается цитата Баффета (Подпрпавить стили)
+	 ? Реквизиты для оплаты кликабельны все (Поджредактировать стили)
+	 ? В разделе Информация зачем-то подсвечивается цитата Баффета (Подпрпавить стили)
 	 ? В Политику конфеденциальности нужно добавить название сайта
 	 ? Убрать из описания сайта название шаблона Startup HTML добавить туда Индивидуальное обучение трейдингу от Артёма Ивина
 	 ? Проверить отзывы!!!
