--- a/app/index.html
+++ b/app/index.html
@@ -133,11 +133,11 @@
 				<p class="now__description">
 					<span>-Более 50% годовой доходности стабильно.</span>
 					<span>-6 лет торговли в плюс</span>
-					<span class="now__description--accent">-На деньги с трейдинга посетил 61 страну.</span>
+					<span>-На деньги с трейдинга посетил 61 страну.</span>
 					<span>-Все ученики зарабатывают на бирже</span>
-					<span><a
-							href="https://vk.com/away.php?to=https%3A%2F%2Fwww.tinkoff.ru%2Finvest%2Fsocial%2Fprofile%2FArtem_Ivin%2F&el=snippet">-Статистика
-							открыта и говорит сама за себя<br> в отличии от 99% курсов</a></span>
+					<span>
+						<a  class="now__description--accent" href="https://vk.com/away.php?to=https%3A%2F%2Fwww.tinkoff.ru%2Finvest%2Fsocial%2Fprofile%2FArtem_Ivin%2F&el=snippet" target="_blank">-Статистика открыта и говорит сама за себя<br> в отличии от 99% курсов</a>
+					</span>
 					<span>ПОЛНОСТЬЮ ИНДИВИДУАЛЬНОЕ обучение, <br> где вам ответят на ВАШИ вопросы </span>
 					<span>и обучение на примере ВАШИХ компаний</span>
 					<span>с рекомендациями в РЕАЛЬНОМ ВРЕМЕНИ</span>
@@ -299,6 +299,7 @@
 	</section>
 	<!-- /.review -->
 
+	<!-- FAQ -->
 	<section class="faq" id="faq">
 		<div class="container">
 			<div class="heading">
@@ -497,7 +498,7 @@
 							<ul>
 								<li>
 									Рынок – это механизм передачи денег от нетерпеливых к терпеливым (Уоррен Баффет) </li>
-								<li class="politic__link">Политика конфиденциальности</li>
+								<li class="politic__link"><a href="#">Политика конфиденциальности</a></li>
 							</ul>
 						</div>
 					</div>
