--- a/todo.html
+++ b/todo.html
@@ -12,17 +12,16 @@
 	 todo Переработать bg (Плавность перехода) + в блоке ЧЕМУ ТЫ НАУЧИШЬСЯ? убрать с фона текст
 	 ? После фразы -Статистика открыта и говорит сама за себя добавить ссылку (Смотреть вк)
 	 ? Отступы подредактировать (Почему курс Артема Ивина) (Баг)
-	 todo Цены на однин уровень + старая цена+процент скидки
+	 ? Цены на однин уровень + старая цена+процент скидки+добавить ещё один вариант Цена за 1 год 10 тыс
 	 ? Блок ЧЕМУ ВЫ НАУЧИТЕСЬ? (В одну колонку, убрать стили flex)
-	 todo Бегущий текст наезжает на фото, сделать в 2 строки (проверить)
+	 ? Бегущий текст наезжает на фото, сделать в 2 строки (проверить)
 	 todo Ссылку в соц сетях (превью)
 	 ? Большой отступ на главном экране – поднять фотографию наверх.
 	 ? Заменить плюсы на другие иконки
-	 ! Блок пробелы в знаниях - Неправильное оформление блока, колонки выстроены неравномерно.????
 	 ? Часто задаваемые вопросы желтый цвет заменить на белый
-	 todo Под формой в обязательном порядке необходимо добавить согласие на обработку данных. (Интересно моё мнение)
+	 ? Под формой в обязательном порядке необходимо добавить согласие на обработку данных. (Интересно моё мнение)
+	 ? форма записи на курс добавить выбор тарифа
 	 ? Заменить favicon
-	 todo форма записи на курс добавить выбор тарифа
 	 ? Реквизиты для оплаты кликабельны все (Поджредактировать стили)
 	 ? В разделе Информация зачем-то подсвечивается цитата Баффета (Подпрпавить стили)
 	 ? В Политику конфеденциальности нужно добавить название сайта
